added tenant, contact, and remote maintenance tests

--- a/data/manifest.json
+++ b/data/manifest.json
@@ -26,6 +26,9 @@
 
     "login.json",
     "logout.json",
+    "contacts.json",
+    "remote_maintenance.json",
+    "tenant_switching.json",
 
     "language_english.json",
     "language_french.json",
